kubernetes/k3s-prod-a/mosquitto/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mosquitto
          port: 1883
